src/main/webapp/desktopView/TagAPrice-blue.css
/*
color background gray: ebe9e1

*/
html {
    background-color: #43aabe;
}

body {
    margin: 0px;
    padding: 0px;
    background-color: #43aabe;
    font-family: "Arial", "Helvetica", "Verdana", "sans-serif";
    font-family: times;
    font-size: small;
    background: -webkit-linear-gradient(#43aabe 10px, #43aabe 120px, white 120px);
    /* Safari 5.1+, Chrome 10+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(10px, #43aabe
        ), color-stop(120px, #43aabe), color-stop(120px, white) );
    /* Safari 4+, Chrome 2+ */
    background: -moz-linear-gradient(#43aabe 10px, #43aabe 120px, white 120px);
    /* FF 3.6+ */
    background: -ms-linear-gradient(#43aabe 10px, #43aabe 120px, white 120px);
    /* IE10 */
    background: linear-gradient(#43aabe 10px, #43aabe 120px, white 120px);
    /* the standard */
}

body,p,h1,h2,h3,h4,table,td,th,ul,ol,textarea,input {
    
}

a {
    color: #72aa00;
    text-decoration: none;
}

a:HOVER {
    text-decoration: underline;
}

.main {
    width: 85%;
}

.header {
    height: 60px;
}

.logo a {
    color: white;
    font-family: 'Passero One', cursive;
    font-size: 40px;
    text-shadow: 0px 0px 10px white;
}

.logo a:hover {
    color: white;
    text-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
    text-decoration: none;
}

.header-search {
    color: #2c2d25;
    font-weight: bold;
    width: 500px;
    background-color: white;
    margin: 0px;
    padding: 5px;
    border-radius: 2px;
    border-top-right-radius: 0px;
    border-top-left-radius: 0px;
    border: solid 2px #ebe9e1;
    border-top-width: 0px;
    background-image: url('06-magnify.png');
    background-repeat: no-repeat;
    background-position: left center;
    padding-left: 28px;
    box-shadow: 0px 4px 15px black;
}

.header-search:HOVER {
    /*box-shadow:  0px 0px 3px 3px rgba(255,255,255,0.5);*/
    box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.5);
}

.header-search:FOCUS {
    color: #2c2d25;
    background-color: white;
    /*box-shadow:  0px 0px 3px 3px rgba(255,255,255,0.5);*/
    box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.5);
}

.header-location {
    color: #2c2d25;
    font-weight: bold;
    background-color: white;
    margin: 0px;
    margin-left: 5px;
    padding: 5px;
    border-radius: 2px;
    border-top-right-radius: 0px;
    border-top-left-radius: 0px;
    border: solid 2px #ebe9e1;
    border-top-width: 0px;
    background-image: url('location.png');
    background-repeat: no-repeat;
    background-position: left center;
    padding-left: 28px;
    box-shadow: 0px 4px 15px black;
}

.header-location:HOVER {
    box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.5);
}

.header-location:FOCUS {
    color: #2c2d25;
    background-color: white;
    /*box-shadow:  0px 0px 3px 3px rgba(255,255,255,0.5);*/
    box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.5);
}

.center {
    text-align: left;
}

/* invitiations */
.startInviteButton {
    color: white;
    font-size: 42px;
    text-align: center;
    cursor: pointer;
    border-radius: 8px;
    background-color: #7fbf4d;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#7fbf4d),
        to(#63a62f) );
    /* Saf4+, Chrome */
    background-image: -webkit-linear-gradient(top, #7fbf4d, #63a62f);
    background-image: -moz-linear-gradient(top, #7fbf4d, #63a62f);
    background-image: -ms-linear-gradient(top, #7fbf4d, #63a62f);
    background-image: -o-linear-gradient(top, #7fbf4d, #63a62f);
    background-image: linear-gradient(top, #7fbf4d, #63a62f);
    border: 1px solid #63a62f;
    border-bottom: 1px solid #5b992b;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    -ms-border-radius: 3px;
    -o-border-radius: 3px;
    border-radius: 3px;
    -webkit-box-shadow: inset 0 1px 0 0 #96ca6d;
    -moz-box-shadow: inset 0 1px 0 0 #96ca6d;
    -ms-box-shadow: inset 0 1px 0 0 #96ca6d;
    -o-box-shadow: inset 0 1px 0 0 #96ca6d;
    box-shadow: inset 0 1px 0 0 #96ca6d;
    color: #fff;
    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans",
        Geneva, Verdana, sans-serif;
    line-height: 1;
    padding: 7px 0 8px 0;
    text-align: center;
    text-shadow: 0 -1px 0 #4c9021;
    margin: 30px;
}

.startInviteButton:hover {
    background-color: #76b347;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#76b347),
        to(#5e9e2e) );
    /* Saf4+, Chrome */
    background-image: -webkit-linear-gradient(top, #76b347, #5e9e2e);
    background-image: -moz-linear-gradient(top, #76b347, #5e9e2e);
    background-image: -ms-linear-gradient(top, #76b347, #5e9e2e);
    background-image: -o-linear-gradient(top, #76b347, #5e9e2e);
    background-image: linear-gradient(top, #76b347, #5e9e2e);
    -webkit-box-shadow: inset 0 1px 0 0 #8dbf67;
    -moz-box-shadow: inset 0 1px 0 0 #8dbf67;
    -ms-box-shadow: inset 0 1px 0 0 #8dbf67;
    -o-box-shadow: inset 0 1px 0 0 #8dbf67;
    box-shadow: inset 0 1px 0 0 #8dbf67;
    cursor: pointer;
}

.startRegisterKeyText{
    border: 1px #2c2d25 solid;
    border-radius: 2px;
    font-size: 30px;
    margin: 30px;
    margin-right:5px;
    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
}
/* ... */

